[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9.0"
volatile = "0.2.6"

# the profile used for 'cargo build'
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for 'cargo build --release'
[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bin]]
name = "blog_os"
test = false
bench = false