[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for 'cargo build'
[profile.dev]

# the profile used for 'cargo build --release'
[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bin]]
name = "blog_os"
test = true
bench = false

[package.metadata.bootimage]
run-args = ["-serial", "stdio", "-display", "curses"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "curses"
]
test-success-exit-code = 33